--- a/EKE_simone.ipynb
+++ b/EKE_simone.ipynb
@@ -2,10 +2,314 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5b74d7b1-8e59-47c0-84d7-c44fd124bf16",
+   "metadata": {},
+   "source": [
+    "### Jexpresso single grid comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb4c234a-0eff-45b9-8c71-bbe06f9d8d26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import pyvista as pv\n",
+    "from scipy.interpolate import interp1d\n",
+    "from pathlib import Path\n",
+    "import matplotlib.pyplot as plt\n",
+    "import warnings\n",
+    "import os\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "\n",
+    "class EKEAnalysis:\n",
+    "    \"\"\"Analyze JExpresso outputs using Domain Mean Subtraction method\"\"\"\n",
+    "    \n",
+    "    def __init__(self, ref_file, pert_file, max_height=24000):\n",
+    "        self.ref_file = ref_file\n",
+    "        self.pert_file = pert_file\n",
+    "        self.max_height = max_height\n",
+    "\n",
+    "    def extract_jexpresso_data(self):\n",
+    "        ref_mesh = pv.read(self.ref_file)\n",
+    "        pert_mesh = pv.read(self.pert_file)\n",
+    "        \n",
+    "        if ref_mesh.n_points != pert_mesh.n_points:\n",
+    "            z_ref = ref_mesh.points[:, 1]\n",
+    "            ref_sort_idx = np.argsort(z_ref)\n",
+    "            z_ref_sorted = z_ref[ref_sort_idx]\n",
+    "            rho_ref = ref_mesh.point_data['ρ'][ref_sort_idx]\n",
+    "            rho_u_ref = ref_mesh.point_data['ρu'][ref_sort_idx]\n",
+    "            rho_v_ref = ref_mesh.point_data['ρv'][ref_sort_idx]\n",
+    "            \n",
+    "            z_pert = pert_mesh.points[:, 1]\n",
+    "            pert_sort_idx = np.argsort(z_pert)\n",
+    "            z_pert_sorted = z_pert[pert_sort_idx]\n",
+    "            rho_pert = pert_mesh.point_data['ρ'][pert_sort_idx]\n",
+    "            rho_u_pert = pert_mesh.point_data['ρu'][pert_sort_idx]\n",
+    "            rho_v_pert = pert_mesh.point_data['ρv'][pert_sort_idx]\n",
+    "            \n",
+    "            if len(z_ref_sorted) > len(z_pert_sorted):\n",
+    "                z_common = z_ref_sorted\n",
+    "                f_rho_pert = interp1d(z_pert_sorted, rho_pert, bounds_error=False, fill_value=0, kind='linear')\n",
+    "                f_rho_u_pert = interp1d(z_pert_sorted, rho_u_pert, bounds_error=False, fill_value=0, kind='linear')\n",
+    "                f_rho_v_pert = interp1d(z_pert_sorted, rho_v_pert, bounds_error=False, fill_value=0, kind='linear')\n",
+    "                \n",
+    "                rho_total = rho_ref + f_rho_pert(z_common)\n",
+    "                rho_u_total = rho_u_ref + f_rho_u_pert(z_common)\n",
+    "                rho_v_total = rho_v_ref + f_rho_v_pert(z_common)\n",
+    "            else:\n",
+    "                z_common = z_pert_sorted\n",
+    "                f_rho_ref = interp1d(z_ref_sorted, rho_ref, bounds_error=False, fill_value=0, kind='linear')\n",
+    "                f_rho_u_ref = interp1d(z_ref_sorted, rho_u_ref, bounds_error=False, fill_value=0, kind='linear')\n",
+    "                f_rho_v_ref = interp1d(z_ref_sorted, rho_v_ref, bounds_error=False, fill_value=0, kind='linear')\n",
+    "                \n",
+    "                rho_total = f_rho_ref(z_common) + rho_pert\n",
+    "                rho_u_total = f_rho_u_ref(z_common) + rho_u_pert\n",
+    "                rho_v_total = f_rho_v_ref(z_common) + rho_v_pert\n",
+    "        else:\n",
+    "            z_common = ref_mesh.points[:, 1]\n",
+    "            rho_total = ref_mesh.point_data['ρ'] + pert_mesh.point_data['ρ']\n",
+    "            rho_u_total = ref_mesh.point_data['ρu'] + pert_mesh.point_data['ρu']\n",
+    "            rho_v_total = ref_mesh.point_data['ρv'] + pert_mesh.point_data['ρv']\n",
+    "        \n",
+    "        valid_mask = np.abs(rho_total) > 1e-10\n",
+    "        u_total = np.zeros_like(rho_u_total)\n",
+    "        v_total = np.zeros_like(rho_v_total)\n",
+    "        u_total[valid_mask] = rho_u_total[valid_mask] / rho_total[valid_mask]\n",
+    "        v_total[valid_mask] = rho_v_total[valid_mask] / rho_total[valid_mask]\n",
+    "        \n",
+    "        height_tolerance = 100.0\n",
+    "        heights_rounded = np.round(z_common / height_tolerance) * height_tolerance\n",
+    "        unique_heights_rounded = np.unique(heights_rounded)\n",
+    "        \n",
+    "        eke_profile = []\n",
+    "        height_profile = []\n",
+    "        \n",
+    "        for h_target in unique_heights_rounded:\n",
+    "            height_mask = np.abs(heights_rounded - h_target) < (height_tolerance / 2)\n",
+    "            if np.sum(height_mask) < 2:\n",
+    "                continue\n",
+    "                \n",
+    "            u_total_level = u_total[height_mask]\n",
+    "            v_total_level = v_total[height_mask]\n",
+    "            rho_level = rho_total[height_mask]\n",
+    "            z_level = z_common[height_mask]\n",
+    "            \n",
+    "            valid_level_mask = (rho_level > 1e-10) & np.isfinite(u_total_level) & np.isfinite(v_total_level)\n",
+    "            if np.sum(valid_level_mask) < 2:\n",
+    "                continue\n",
+    "                \n",
+    "            u_total_level = u_total_level[valid_level_mask]\n",
+    "            v_total_level = v_total_level[valid_level_mask]\n",
+    "            rho_level = rho_level[valid_level_mask]\n",
+    "            z_level = z_level[valid_level_mask]\n",
+    "            \n",
+    "            u_mean_level = np.mean(u_total_level)\n",
+    "            v_mean_level = np.mean(v_total_level)\n",
+    "            u_pert = u_total_level - u_mean_level\n",
+    "            v_pert = v_total_level - v_mean_level\n",
+    "            eke = 0.5 * rho_level * (u_pert**2 + v_pert**2)\n",
+    "            eke_mean = np.mean(eke)\n",
+    "            \n",
+    "            if eke_mean > 1000 or eke_mean < 0 or not np.isfinite(eke_mean):\n",
+    "                continue\n",
+    "                \n",
+    "            eke_profile.append(eke_mean)\n",
+    "            height_profile.append(np.mean(z_level))\n",
+    "            \n",
+    "        if len(eke_profile) == 0:\n",
+    "            self.jex_data = pd.DataFrame({'Height (m)': [], 'EKE (J/m3)': []})\n",
+    "            return\n",
+    "        \n",
+    "        df_raw = pd.DataFrame({\n",
+    "            \"Height (m)\": height_profile,\n",
+    "            \"EKE (J/m3)\": eke_profile\n",
+    "        })\n",
+    "        self.jex_data = df_raw[df_raw[\"Height (m)\"] <= self.max_height].drop_duplicates(subset=[\"Height (m)\"]).sort_values('Height (m)').reset_index(drop=True)\n",
+    "\n",
+    "    def get_mean_eke(self):\n",
+    "        \"\"\"Return mean EKE value\"\"\"\n",
+    "        if len(self.jex_data) == 0:\n",
+    "            return np.nan\n",
+    "        return np.nanmean(self.jex_data[\"EKE (J/m3)\"].values)\n",
+    "\n",
+    "\n",
+    "def process_configuration(ref_file, pert_base_path, max_time_minutes=500):\n",
+    "    \"\"\"Process configuration and stop at max_time_minutes (default 500)\"\"\"\n",
+    "    \n",
+    "    if not Path(ref_file).exists():\n",
+    "        print(f\"Reference file not found: {ref_file}\")\n",
+    "        return None\n",
+    "    \n",
+    "    time_data = {'jex': [], 'times': []}\n",
+    "    \n",
+    "    max_iterations = max_time_minutes // 10\n",
+    "    existing_pert_files = [i for i in range(max_iterations) if Path(pert_base_path.format(i)).exists()]\n",
+    "    \n",
+    "    if not existing_pert_files:\n",
+    "        print(f\"No perturbation files found at: {pert_base_path}\")\n",
+    "        return None\n",
+    "    \n",
+    "    successful_iterations = 0\n",
+    "    for i in existing_pert_files:\n",
+    "        try:\n",
+    "            analysis = EKEAnalysis(ref_file, pert_base_path.format(i), max_height=24000)\n",
+    "            analysis.extract_jexpresso_data()\n",
+    "            \n",
+    "            jex_total_eke = analysis.get_mean_eke()\n",
+    "            \n",
+    "            if np.isnan(jex_total_eke) or jex_total_eke > 500 or jex_total_eke < 0:\n",
+    "                continue\n",
+    "            \n",
+    "            time_data['jex'].append(jex_total_eke)\n",
+    "            time_data['times'].append(i * 10)\n",
+    "            successful_iterations += 1\n",
+    "        except Exception as e:\n",
+    "            continue\n",
+    "    \n",
+    "    print(f\"Successfully processed {successful_iterations} time steps\")\n",
+    "    return time_data if len(time_data['jex']) > 0 else None\n",
+    "\n",
+    "\n",
+    "def plot_fine_grid_sam(time_data, output_dir):\n",
+    "    \"\"\"Create publication-quality plot for fine grid SAM only\"\"\"\n",
+    "    \n",
+    "    # Set publication-quality matplotlib parameters\n",
+    "    plt.rcParams['font.family'] = 'sans-serif'\n",
+    "    plt.rcParams['font.sans-serif'] = ['Arial', 'DejaVu Sans']\n",
+    "    plt.rcParams['font.size'] = 12\n",
+    "    plt.rcParams['axes.linewidth'] = 1.5\n",
+    "    plt.rcParams['xtick.major.width'] = 1.5\n",
+    "    plt.rcParams['ytick.major.width'] = 1.5\n",
+    "    \n",
+    "    fig, ax = plt.subplots(figsize=(12, 8))\n",
+    "    ax.set_facecolor('#FAFAFA')\n",
+    "    \n",
+    "    times = time_data['times']\n",
+    "    jex_data = time_data['jex']\n",
+    "    \n",
+    "    # Determine y-axis limits\n",
+    "    positive_values = [v for v in jex_data if v > 0]\n",
+    "    if len(positive_values) > 0:\n",
+    "        y_min = max(1e-7, min(positive_values) * 0.3)\n",
+    "        y_max = max(positive_values) * 3.0\n",
+    "    else:\n",
+    "        y_min = 1e-7\n",
+    "        y_max = 1e2\n",
+    "    \n",
+    "    # Replace zeros and negative values with y_min for log scale\n",
+    "    jex_data_plot = [max(v, y_min) for v in jex_data]\n",
+    "    \n",
+    "    # Plot with distinctive styling\n",
+    "    ax.semilogy(times, jex_data_plot,\n",
+    "                color='#D97330',  # Dark orange\n",
+    "                linestyle='-',     # Solid line\n",
+    "                marker='o',        # Circle markers\n",
+    "                markersize=8,\n",
+    "                linewidth=2.5,\n",
+    "                label='JExpresso EKE',\n",
+    "                alpha=0.90,\n",
+    "                markevery=max(1, len(times)//15),\n",
+    "                markeredgewidth=1.5,\n",
+    "                markeredgecolor='white',\n",
+    "                zorder=4)\n",
+    "    \n",
+    "    # Set axis limits\n",
+    "    ax.set_ylim(y_min, y_max)\n",
+    "    ax.set_xlim(0, 500)\n",
+    "    \n",
+    "    # Labels and title\n",
+    "    ax.set_xlabel('Time (minutes)', fontsize=14, fontweight='600')\n",
+    "    ax.set_ylabel('Mean EKE (J/m³)', fontsize=14, fontweight='600')\n",
+    "    ax.set_title('Fine Grid (200m) - SAM Microphysics - Order 4\\nJExpresso EKE Analysis',\n",
+    "                fontsize=16, fontweight='bold', pad=15)\n",
+    "    \n",
+    "    # Enhanced grid\n",
+    "    ax.grid(True, alpha=0.15, color='gray', linewidth=0.5, linestyle=':', which='minor')\n",
+    "    ax.grid(True, alpha=0.35, color='gray', linewidth=0.8, linestyle='-', which='major')\n",
+    "    \n",
+    "    # Enhanced spines\n",
+    "    for spine in ax.spines.values():\n",
+    "        spine.set_color('#333333')\n",
+    "        spine.set_linewidth(1.5)\n",
+    "    \n",
+    "    # Improve tick appearance\n",
+    "    ax.tick_params(axis='both', which='major', labelsize=11, width=1.5, length=7)\n",
+    "    ax.tick_params(axis='both', which='minor', width=1.0, length=4)\n",
+    "    \n",
+    "    # Add legend\n",
+    "    ax.legend(loc='best', fontsize=12, frameon=True, fancybox=True,\n",
+    "             framealpha=0.95, edgecolor='#CCCCCC')\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    filename = \"Fine_Grid_200m_SAM_Order4.png\"\n",
+    "    filepath = os.path.join(output_dir, filename)\n",
+    "    plt.savefig(filepath, dpi=400, bbox_inches='tight', facecolor='white', edgecolor='none')\n",
+    "    plt.close()\n",
+    "    print(f\"Saved plot: {filename}\")\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    \n",
+    "    # Create output directory\n",
+    "    output_base = \"/Users/olayemiadeyemi/Documents/sponge_on\"\n",
+    "    os.makedirs(output_base, exist_ok=True)\n",
+    "    \n",
+    "    print(\"=\" * 80)\n",
+    "    print(\"Starting Fine Grid (200m) SAM Analysis - Order 4\")\n",
+    "    print(\"=\" * 80)\n",
+    "    \n",
+    "    # Define file paths\n",
+    "    ref_file = \"/Users/olayemiadeyemi/Documents/New/reference_state/fine_4/output/iter_0.pvtu\"\n",
+    "    pert_file = \"/Users/olayemiadeyemi/Documents/sponge_on/f_150_sam_4/output/iter_{}.pvtu\"\n",
+    "    \n",
+    "    print(f\"\\nReference file: {ref_file}\")\n",
+    "    print(f\"Perturbation files: {pert_file}\")\n",
+    "    print(\"-\" * 80)\n",
+    "    \n",
+    "    # Process the configuration\n",
+    "    print(\"\\nProcessing fine grid SAM configuration...\")\n",
+    "    try:\n",
+    "        time_data = process_configuration(ref_file, pert_file, max_time_minutes=500)\n",
+    "        \n",
+    "        if time_data and len(time_data['jex']) > 0:\n",
+    "            print(f\"✓ Successfully processed {len(time_data['jex'])} time steps\")\n",
+    "            \n",
+    "            # Generate plot\n",
+    "            print(\"\\nGenerating publication-quality plot...\")\n",
+    "            print(\"-\" * 80)\n",
+    "            plot_fine_grid_sam(time_data, output_base)\n",
+    "            \n",
+    "            print(\"\\n\" + \"=\" * 80)\n",
+    "            print(\"Analysis complete!\")\n",
+    "            print(f\"Output directory: {output_base}\")\n",
+    "            print(\"=\" * 80)\n",
+    "            print(f\"  - Plot saved: {output_base}/Fine_Grid_200m_SAM_Order4.png\")\n",
+    "            print(\"=\" * 80)\n",
+    "        else:\n",
+    "            print(\"✗ No valid data found\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"✗ Failed to process: {e}\")\n",
+    "        import traceback\n",
+    "        traceback.print_exc()\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "43f1f859-4be2-4c3f-85ca-196369d1f521",
    "metadata": {},
    "source": [
-    "## Jexpresso Only"
+    "## Jexpresso multi-grid comparison"
    ]
   },
   {
